cabal-version:      2.4
name:               cronmylife
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Josep Bigorra
maintainer:         jjbigorra@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -Wall
  exposed-modules:
    CronMyLife.Lib
    CronMyLife.Model
    CronMyLife.Persistence
    CronMyLife.Presentation
    CronMyLife.Repository.Beam

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , aeson                 ^>=2.0.3
    , base                  ^>=4.14.3.0
    , beam-core             ^>=0.9.2
    , beam-migrate          ^>=0.5.1
    , beam-sqlite           ^>=0.5.1
    , bytestring            ^>=0.10.12
    , containers            ^>=0.6.5
    , libiserv              ^>=8.10.7
    , optparse-applicative  ^>=0.16.1.0
    , raw-strings-qq        ^>=1.1
    , regex-tdfa            ^>=1.3.1
    , split                 ^>=0.2.3
    , sqlite-simple         ^>=0.4.18
    , text                  ^>=1.2.4
    , time                  ^>=1.9.3

  hs-source-dirs:   src
  default-language: Haskell2010

executable cronmylife
  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , base        ^>=4.14.3.0
    , cronmylife

  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -Wall
