cabal-version:      2.4
name:               cronmylife
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Josep Bigorra
maintainer:         jjbigorra@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -Wall
  exposed-modules:
    CronMyLife.Lib
    CronMyLife.Model
    CronMyLife.Presentation
    CronMyLife.Persistent.Entities
    CronMyLife.Persistent.Repository

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , aeson                  ^>=2.0.3
    , base                   ^>=4.14.3.0
    , containers             ^>=0.6.5
    , persistent             ^>=2.14.0
    , persistent-postgresql  ^>=2.13.5
    , persistent-sqlite      ^>=2.13.1
    , persistent-template    ^>=2.12.0
    , regex-tdfa             ^>=1.3.1
    , text                   ^>=1.2.4
    , time                   ^>=1.9.3
    , conduit ^>= 1.3.4
    , monad-logger ^>=0.3.36
    , mtl ^>= 2.2.2
    , unliftio-core ^>= 0.2.0
    , esqueleto ^>= 3.5.4

  hs-source-dirs:   src
  default-language: Haskell2010

executable cronmylife
  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , base        ^>=4.14.3.0
    , cronmylife

  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -Wall
